akri/templates/akri-default-streaming-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: akri-video-streaming-app
  namespace: akri
spec:
  replicas: 1
  selector:
    matchLabels:
      app: akri-video-streaming-app
  template:
    metadata:
      labels:
        app: akri-video-streaming-app
    spec:
      serviceAccountName: akri-video-streaming-app-sa
      
      volumes:
        - name: index-html
          configMap:
            name: custom-index-html
      containers:
      - name: akri-video-streaming-app
        image: ghcr.io/project-akri/akri/video-streaming-app:latest-dev
        imagePullPolicy: Always
        securityContext:
          runAsUser: 1000
          allowPrivilegeEscalation: true
          runAsNonRoot: true
          readOnlyRootFilesystem: true
        volumeMounts:
          - name: index-html
            mountPath: /app/templates/index.html
            subPath: index.html
---
apiVersion: v1
kind: Service
metadata:
  name: akri-video-streaming-app
  namespace: akri
  labels:
    app: akri-video-streaming-app
spec:
  selector:
    app: akri-video-streaming-app
  ports:
  - name: http
    port: 80
    targetPort: 5000
  type: LoadBalancer
