akri/templates/streaming-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressRoute
metadata:
  name: akri-video-streaming-ingress
  namespace: akri
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: akri-keycloak-auth-middleware@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: cats.scmeyer.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: akri-video-streaming-app
                port:
                  number: 80
